# having_fun_with_bevy

./: Cargo.toml  flake.nix  shell.nix
.cargo/: config.toml
assets/: license.txt  zombak.gltf
flake-modules/: cargo.nix  flake_soon.nix  rust-toolchain.nix  shells.nix
src/: camera.rs  cursor.rs  main.rs  music.rs  player.rs  scene.rs
