[package]
name = "bevy_t"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2" }
bevy_kira_audio = { version = "0.19.0", features = ["mp3"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
